# mentor_web

./: README.md  pyproject.toml  requirements.txt
api/: config.py  main.py  main_test.py
api/admin/: __init__.py  category.py  dto.py  tag.py
api/blog/article/: controller.py
api/dependencies/: admin.py  common.py  db.py
core/: dto.py
core/admin/: __init__.py
core/admin/article/: __init__.py  dto.py  exceptions.py  repository.py  service.py
core/admin/article/commands/: common.py  create_article_command.py  update_article_command.py
core/admin/category/: __init__.py  dto.py  repository.py  service.py
core/admin/tag/: __init__.py  dto.py  repository.py  service.py
core/blog/article/: dto.py  repository.py  service.py
core/blog/comment/: dto.py  repository.py  service.py
core/blog/like/: dto.py  repository.py  service.py
core/file/: protocol.py  service.py
core/landing/about/: dto.py  repository.py  service.py
core/landing/external_resource/: dto.py  repository.py  service.py
core/landing/main_page/: dto.py  repository.py  service.py
core/landing/offering/: dto.py  repository.py  service.py
migrations/: env.py
migrations/versions/: 1898a1f75c51_tag.py  3945e791b69c_init.py
repositories/: base_repository.py
repositories/admin/: category.py  tag.py
repositories/models/: base.py  category.py  tag.py
