[tool.poetry]
name = "mentor-web"
version = "0.1.0"
description = "Website of mentor"
authors = ["anastasiakuklina <anastasijakuklina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.14.0"
pydantic = "2.10.2"
pydantic-settings = "2.7.1"
result = "0.17.0"
sqlalchemy = "2.0.36"
uvicorn = ">=0.34.0,<0.35.0"
fastapi = ">=0.115.6,<0.116.0"
psycopg = {extras = ["binary"], version = "^3.2.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
